--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </form>
       </header>
 
-      <ul class="list-group todos mx-auto text-light">
+      <ul class="list-group todos mx-auto text-light" id="todos">
         <li
           class="list-group-item d-flex justify-content-between align-items-center"
         >
@@ -51,9 +51,9 @@
         </li>
       </ul>
 
-      <form class="add text-center my-4">
+      <form class="add text-center my-4" id="add-form">
         <label class="text-light">Add a new to-do</label>
-        <input class="form-control m-auto" type="text" name="add" />
+        <input class="form-control m-auto" type="text" id="addtodo" name="addtodo" />
       </form>
     </div>
 
