add functionality to remove todos

--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
         </li>
       </ul>
 
-      <form class="add text-center my-4" id="add-form">
+      <form class="add-form text-center my-4">
         <label class="text-light">Add a new to-do</label>
-        <input class="form-control m-auto" type="text" id="addtodo" name="addtodo" />
+        <input
+          class="form-control m-auto"
+          type="text"
+          id="addtodo"
+          name="addtodo"
+        />
       </form>
     </div>
 
